[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
default-run = "codecrafters-redis"

[lib]
name = "codecrafters_redis"
path = "src/lib.rs"

[[bin]]
name = "codecrafters-redis"
path = "src/main.rs"

[[bin]]
name = "load_test"
path = "src/bin/load_test.rs"

[[bench]]
name = "lrange_xrange"
harness = false

[dependencies]
anyhow = "^1"                                   # error handling
bytes = "^1"                                     # helps manage buffers
thiserror = "^2"                                # error handling
tokio = { version = "^1", features = ["full"] } # async networking

[dev-dependencies]
criterion = { version = "^0.8", features = ["async_tokio"] }
